<resources>
    <string name="app_name">Álcool ou Gasolina</string>
    <string name="saiba_a_melhor_op_o_de_abastecimento_do_seu_carro">Saiba a melhor opção de abastecimento do seu carro</string>
    <string name="resultado">Resultado</string>
    <string name="calcular">CALCULAR</string>
    <string name="pre_o_gasolina_ex_2_60">Preço gasolina ex: 2.60</string>
    <string name="todo">TODO</string>
    <string name="pre_o_lcool_ex_1_90">Preço álcool ex: 1.90</string>
</resources>